<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/cost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/cost_of_service"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="cost of service" />

    <TextView
        android:id="@+id/how"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="@+id/cost"
        app:layout_constraintTop_toBottomOf="@+id/cost" />

    <RadioGroup
        android:id="@+id/tipRadio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/how"
        app:layout_constraintTop_toBottomOf="@+id/how">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amazing" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/good" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/roundPrompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/round_up_tip"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="@id/tipRadio"
        app:layout_constraintTop_toBottomOf="@id/tipRadio"/>

    <Button
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/calculate"
        app:layout_constraintStart_toStartOf="@+id/roundPrompt"
        app:layout_constraintTop_toBottomOf="@+id/roundPrompt" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/tip_amount"
        app:layout_constraintEnd_toEndOf="@+id/calculate"
        app:layout_constraintTop_toBottomOf="@+id/calculate" />

    <ImageView
        android:id="@+id/cat"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipAmount"
        app:srcCompat="@drawable/kucing"
        android:contentDescription="@string/weird_cat" />


</androidx.constraintlayout.widget.ConstraintLayout>